# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: page-analyzer.yml
page_analyzer/: __init__.py  app.py
page_analyzer/templates/: index.html
page_analyzer/templates/urls/: index.html  show.html
