[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = ""
authors = ["Selezneva Marina <petrukhina.marina2011@yandex.ru>"]
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
gunicorn = "^20.1.0"
Flask = "^2.2.2"
Jinja2 = "^3.1.2"
psycopg2 = "^2.9.5"

[tool.poetry.scripts]

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
pytest = "^6.2.3"
pytest-cov = "^2.11.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
